--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.7
 Flask==3.0.0
 Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.5
 flask-restx==1.3.0
@@ -22,6 +23,7 @@ marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
 packaging==23.2
 psycopg2-binary==2.9.9
+PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 referencing==0.32.0
