--- a/DSR/requirements.txt
+++ b/DSR/requirements.txt
@@ -7,12 +7,15 @@ Django==5.0.1
 django-extensions==3.2.3
 django-modeladmin-reorder==0.3.1
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 exceptiongroup==1.2.0
 executing==2.0.1
 idna==3.6
+inflection==0.5.1
 ipython==8.21.0
 jedi==0.19.1
 matplotlib-inline==0.1.6
+packaging==23.2
 parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
@@ -23,11 +26,13 @@ pure-eval==0.2.2
 Pygments==2.17.2
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
 traitlets==5.14.1
 typing_extensions==4.9.0
 ulid-py==1.1.0
+uritemplate==4.1.1
 urllib3==2.2.0
 wcwidth==0.2.13
